# Kaggle

./: AI Assisted Learning Path Allocator.pptx  README.md  docker-compose.yml
ai/: README.md
ai/agents/: __init__.py  experience_agent.py  fresher_agent.py  github_analyzer.py  jira_analyzer.py  learning_path_agent.py  project_analyzer.py  prompts.py  readiness_agent.py  tools.py
ai/rag/: retriever.py  vector_store.py
backend/: .env  Dockerfile  README.md  api.ts  pyproject.toml  requirements.txt  seed.py  types.ts
backend/app/: deps.py  main.py
backend/app/api/: courses.py  dashboard.py  employee_portal.py  integrations.py  learning_paths.py  performance.py  projects.py  reports.py  team.py  team_members.py
backend/app/core/: ai_agents.py  config.py  db.py  models.py  schemas.py  services.py
db/: README.md  database_setup_guide.md  schema.sql
employee-portal/: app.js  home.html  index.html  mandatory.html  skills.html  styles.css  viewer.html
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/assign-learning/: page.tsx
frontend/app/components/: chart-card.tsx  header.tsx  sidebar.tsx  stats-card.tsx
frontend/app/courses/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/learning-paths/: page.tsx
frontend/app/lib/: api.ts  types.ts
frontend/app/performance/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/reports/: page.tsx
frontend/app/team-analysis/: page.tsx
(+9 files in other folders)
