[tool]
name = "AI Engineering Manager"
version = "0.1.0"
description = "A SaaS application for HR and Team Leads to analyze projects, team skills, and generate learning paths."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.27.0"
pgvector = "^0.4.0"
pydantic = "^1.10.0"
langchain = "^0.0.200"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
mypy = "^0.991"
isort = "^5.10.0"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"